# DogVision

./: .dockerignore  .env_example  .gitignore  Dockerfile  LICENSE  README.md  bot_main.py  config.py  main.py  pyproject.toml
app/: app.py  config.py  web_app.py
app/routes/: camera_controls.py  main_routes.py  metrics_routes.py  onvif.py
app/static/: script.js
app/templates/: index.html
app/utils/: video_processing.py
bot/: keyboards.py  process_manager.py  scheduler.py  state_manager.py  stats_collector.py
cam_module/: cam_hub.py  cam_reader.py  cam_worker.py
help_tools/: data_containers.py  logger_worker.py
nn_module/: nn_hub.py  nn_worker.py
notebooks/: test_rtsp.ipynb
